CarrentalnewParser.java
// Generated from Carrentalnew.g4 by ANTLR 4.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CarrentalnewParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__45=1, T__44=2, T__43=3, T__42=4, T__41=5, T__40=6, T__39=7, T__38=8, 
		T__37=9, T__36=10, T__35=11, T__34=12, T__33=13, T__32=14, T__31=15, T__30=16, 
		T__29=17, T__28=18, T__27=19, T__26=20, T__25=21, T__24=22, T__23=23, 
		T__22=24, T__21=25, T__20=26, T__19=27, T__18=28, T__17=29, T__16=30, 
		T__15=31, T__14=32, T__13=33, T__12=34, T__11=35, T__10=36, T__9=37, T__8=38, 
		T__7=39, T__6=40, T__5=41, T__4=42, T__3=43, T__2=44, T__1=45, T__0=46, 
		INT=47, ID=48, WS=49, ARTICLE=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'rental price'", "'price conversion'", "'of'", "'that'", 
		"'at least one'", "'some'", "'each'", "'provisionally charged to'", "'AND'", 
		"'it is impossible that'", "'exactly '", "'IF'", "'for'", "'if'", "'at least '", 
		"'THEN'", "'converted to'", "'more than one'", "'is'", "'it is prohibited that'", 
		"'has'", "'open rental'", "' and at most '", "'which'", "'Then'", "'operating company'", 
		"'responsible for'", "'exactly one'", "'it is obligatory that'", "'is not'", 
		"'estimated rental price'", "'If'", "'requests'", "'at most '", "'in the name of'", 
		"'insurer'", "'OR'", "'or'", "'who'", "'currency'", "'rental'", "'renter'", 
		"'credit card'", "'at most one'", "'and'", "'then'", "INT", "ID", "WS", 
		"ARTICLE"
	};
	public static final int
		RULE_sbvr = 0, RULE_pola = 1, RULE_obligasi = 2, RULE_kalimatifelse = 3, 
		RULE_modalobligasi = 4, RULE_statement = 5, RULE_numberedQuantification = 6, 
		RULE_identifier = 7, RULE_quantification = 8, RULE_iftoken = 9, RULE_thentoken = 10, 
		RULE_disjunction = 11, RULE_conjunction = 12, RULE_term = 13, RULE_dt = 14, 
		RULE_noun = 15, RULE_verb = 16, RULE_keyword = 17;
	public static final String[] ruleNames = {
		"sbvr", "pola", "obligasi", "kalimatifelse", "modalobligasi", "statement", 
		"numberedQuantification", "identifier", "quantification", "iftoken", "thentoken", 
		"disjunction", "conjunction", "term", "dt", "noun", "verb", "keyword"
	};

	@Override
	public String getGrammarFileName() { return "Carrentalnew.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CarrentalnewParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SbvrContext extends ParserRuleContext {
		public PolaContext pola() {
			return getRuleContext(PolaContext.class,0);
		}
		public SbvrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sbvr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterSbvr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitSbvr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitSbvr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SbvrContext sbvr() throws RecognitionException {
		SbvrContext _localctx = new SbvrContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sbvr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); pola();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PolaContext extends ParserRuleContext {
		public ObligasiContext obligasi() {
			return getRuleContext(ObligasiContext.class,0);
		}
		public KalimatifelseContext kalimatifelse() {
			return getRuleContext(KalimatifelseContext.class,0);
		}
		public PolaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pola; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterPola(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitPola(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitPola(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PolaContext pola() throws RecognitionException {
		PolaContext _localctx = new PolaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pola);
		try {
			setState(40);
			switch (_input.LA(1)) {
			case T__45:
			case T__44:
			case T__41:
			case T__40:
			case T__39:
			case T__36:
			case T__28:
			case T__26:
			case T__24:
			case T__20:
			case T__18:
			case T__17:
			case T__15:
			case T__10:
			case T__6:
			case T__5:
			case T__4:
			case T__3:
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(38); obligasi();
				}
				break;
			case T__34:
			case T__32:
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(39); kalimatifelse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObligasiContext extends ParserRuleContext {
		public ObligasiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligasi; }
	 
		public ObligasiContext() { }
		public void copyFrom(ObligasiContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Obligasi_4Context extends ObligasiContext {
		public ModalobligasiContext modalobligasi() {
			return getRuleContext(ModalobligasiContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public Obligasi_4Context(ObligasiContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterObligasi_4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitObligasi_4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitObligasi_4(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Obligasi_2Context extends ObligasiContext {
		public IftokenContext iftoken() {
			return getRuleContext(IftokenContext.class,0);
		}
		public ModalobligasiContext modalobligasi() {
			return getRuleContext(ModalobligasiContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public Obligasi_2Context(ObligasiContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterObligasi_2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitObligasi_2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitObligasi_2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Obligasi_1Context extends ObligasiContext {
		public ModalobligasiContext modalobligasi() {
			return getRuleContext(ModalobligasiContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Obligasi_1Context(ObligasiContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterObligasi_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitObligasi_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitObligasi_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObligasiContext obligasi() throws RecognitionException {
		ObligasiContext _localctx = new ObligasiContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_obligasi);
		try {
			setState(54);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Obligasi_1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42); modalobligasi();
				setState(43); statement();
				}
				break;

			case 2:
				_localctx = new Obligasi_2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(45); modalobligasi();
				setState(46); statement();
				setState(47); iftoken();
				setState(48); statement();
				}
				break;

			case 3:
				_localctx = new Obligasi_4Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(50); statement();
				setState(51); modalobligasi();
				setState(52); statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KalimatifelseContext extends ParserRuleContext {
		public KalimatifelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kalimatifelse; }
	 
		public KalimatifelseContext() { }
		public void copyFrom(KalimatifelseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Ifthenelse_1Context extends KalimatifelseContext {
		public IftokenContext iftoken() {
			return getRuleContext(IftokenContext.class,0);
		}
		public ThentokenContext thentoken() {
			return getRuleContext(ThentokenContext.class,0);
		}
		public ObligasiContext obligasi() {
			return getRuleContext(ObligasiContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Ifthenelse_1Context(KalimatifelseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterIfthenelse_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitIfthenelse_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitIfthenelse_1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Ifthenelse_2Context extends KalimatifelseContext {
		public IftokenContext iftoken() {
			return getRuleContext(IftokenContext.class,0);
		}
		public ThentokenContext thentoken() {
			return getRuleContext(ThentokenContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public Ifthenelse_2Context(KalimatifelseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterIfthenelse_2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitIfthenelse_2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitIfthenelse_2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KalimatifelseContext kalimatifelse() throws RecognitionException {
		KalimatifelseContext _localctx = new KalimatifelseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_kalimatifelse);
		try {
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Ifthenelse_1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56); iftoken();
				setState(57); statement();
				setState(58); thentoken();
				setState(59); obligasi();
				}
				break;

			case 2:
				_localctx = new Ifthenelse_2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(61); iftoken();
				setState(62); statement();
				setState(63); thentoken();
				setState(64); statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModalobligasiContext extends ParserRuleContext {
		public Token obligationoperator;
		public ModalobligasiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modalobligasi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterModalobligasi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitModalobligasi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitModalobligasi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModalobligasiContext modalobligasi() throws RecognitionException {
		ModalobligasiContext _localctx = new ModalobligasiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modalobligasi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((ModalobligasiContext)_localctx).obligationoperator = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__36) | (1L << T__26) | (1L << T__17))) != 0)) ) {
				((ModalobligasiContext)_localctx).obligationoperator = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Pola_statement_4Context extends StatementContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public VerbContext verb() {
			return getRuleContext(VerbContext.class,0);
		}
		public Pola_statement_4Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterPola_statement_4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitPola_statement_4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitPola_statement_4(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Pola_statement_3Context extends StatementContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public VerbContext verb(int i) {
			return getRuleContext(VerbContext.class,i);
		}
		public List<VerbContext> verb() {
			return getRuleContexts(VerbContext.class);
		}
		public Pola_statement_3Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterPola_statement_3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitPola_statement_3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitPola_statement_3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Pola_statement_5Context extends StatementContext {
		public DisjunctionContext disjunction(int i) {
			return getRuleContext(DisjunctionContext.class,i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<ConjunctionContext> conjunction() {
			return getRuleContexts(ConjunctionContext.class);
		}
		public ConjunctionContext conjunction(int i) {
			return getRuleContext(ConjunctionContext.class,i);
		}
		public List<DisjunctionContext> disjunction() {
			return getRuleContexts(DisjunctionContext.class);
		}
		public Pola_statement_5Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterPola_statement_5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitPola_statement_5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitPola_statement_5(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Pola_statement_2Context extends StatementContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public VerbContext verb() {
			return getRuleContext(VerbContext.class,0);
		}
		public Pola_statement_2Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterPola_statement_2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitPola_statement_2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitPola_statement_2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Pola_statement_1Context extends StatementContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public List<QuantificationContext> quantification() {
			return getRuleContexts(QuantificationContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public QuantificationContext quantification(int i) {
			return getRuleContext(QuantificationContext.class,i);
		}
		public VerbContext verb() {
			return getRuleContext(VerbContext.class,0);
		}
		public Pola_statement_1Context(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterPola_statement_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitPola_statement_1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitPola_statement_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		int _la;
		try {
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new Pola_statement_1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70); quantification();
				setState(71); term();
				setState(72); verb();
				setState(73); quantification();
				setState(74); term();
				}
				break;

			case 2:
				_localctx = new Pola_statement_2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76); term();
				setState(77); identifier();
				setState(78); verb();
				setState(79); term();
				}
				break;

			case 3:
				_localctx = new Pola_statement_3Context(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(81); term();
				setState(82); verb();
				setState(83); term();
				setState(84); verb();
				setState(85); term();
				}
				break;

			case 4:
				_localctx = new Pola_statement_4Context(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(87); term();
				setState(88); verb();
				setState(89); term();
				}
				break;

			case 5:
				_localctx = new Pola_statement_5Context(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(91); term();
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__9) | (1L << T__8) | (1L << T__1))) != 0)) {
					{
					{
					setState(94);
					switch (_input.LA(1)) {
					case T__9:
					case T__8:
						{
						setState(92); disjunction();
						}
						break;
					case T__37:
					case T__1:
						{
						setState(93); conjunction();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(96); term();
					}
					}
					setState(102);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberedQuantificationContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(CarrentalnewParser.INT, i);
		}
		public List<TerminalNode> INT() { return getTokens(CarrentalnewParser.INT); }
		public NumberedQuantificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberedQuantification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterNumberedQuantification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitNumberedQuantification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitNumberedQuantification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberedQuantificationContext numberedQuantification() throws RecognitionException {
		NumberedQuantificationContext _localctx = new NumberedQuantificationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numberedQuantification);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); match(T__31);
				setState(106); match(INT);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107); match(T__12);
				setState(108); match(INT);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109); match(T__35);
				setState(110); match(INT);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(111); match(T__31);
				setState(112); match(INT);
				setState(113); match(T__23);
				setState(114); match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public Token identifierType;
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			((IdentifierContext)_localctx).identifierType = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__27 || _la==T__16) ) {
				((IdentifierContext)_localctx).identifierType = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuantificationContext extends ParserRuleContext {
		public Token keywordQuantification;
		public QuantificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).enterQuantification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CarrentalnewListener ) ((CarrentalnewListener)listener).exitQuantification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CarrentalnewVisitor ) return ((CarrentalnewVisitor<? extends T>)visitor).visitQuantification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuantificationContext quantification() throws RecognitionException {
		QuantificationContext _localctx = new QuantificationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_quantification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((QuantificationContext)_localctx).keywordQuantification = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__41) | (1L << T__40) | (1L << T__39) | (1L << T__28) | (1L << T__18) | (1L << T__2))) != 0)) ) {
				((QuantificationContext)_localctx).keywordQuantification = (Token)_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IftokenContext extends ParserRuleContext {
		public IftokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iftoken; }
		@Override
		public void enterRule(ParseTreeListener listener) {
